feat: single config improvement

--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@sula/nav": "^1.0.0-alpha.2",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.1.4",
-    "antd": "^4.2.0",
+    "acorn": "^7.2.0",
+    "acorn-walk": "^7.1.1",
+    "antd": "^4.2.5",
+    "ast-types": "^0.13.3",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
     "lint-staged": "^10.0.7",
     "lodash": "^4.17.15",
