--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
     "start": "umi dev",
     "build": "umi build",
     "predeploy": "npm run build",
-    "deploy": "now deploy ./dist -n cook --prod --confirm"
+    "deploy": "now deploy ./dist -n cook --prod"
   },
   "dependencies": {
     "@monaco-editor/react": "^3.3.0",
     "@sula/nav": "1.0.0-alpha.2",
     "antd": "^4.2.5",
-    "sula": "^1.0.0-beta.5"
+    "sula": "^1.0.0-beta.6"
   },
   "devDependencies": {
     "@sula/templates": "^1.0.3",
-    "@umijs/preset-react": "^1.5.8",
+    "@umijs/preset-react": "^1.5.19",
     "acorn": "^7.2.0",
     "acorn-walk": "^7.1.1",
     "ast-types": "^0.13.3",
     "copy-to-clipboard": "^3.3.1",
     "mockjs": "^1.1.0",
-    "umi": "^3.1.4",
+    "umi": "^3.2.14",
     "umi-plugin-sula": "^1.0.0-beta.1"
   }
 }
